# OpenSearch

./: .env.example  .gitignore  Cargo.toml  README.md
frontend/: .env.example
frontend/src/routes/: +page.svelte
frontend/src/routes/settings/: +page.svelte
src/: analytics.rs  checkpoint.rs  crawler.rs  db.rs  embedding_cache.rs  embeddings.rs  incremental.rs  indexer.rs  lib.rs  pagerank.rs  parallel.rs  parser.rs  quantization.rs  query_expansion.rs  queue.rs  rate_limiter.rs  result_cache.rs  robots.rs  sharded.rs  stats.rs  trie.rs  vector_index.rs
