[package]
name = "search_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crawler"
path = "src/bin/crawler.rs"

[[bin]]
name = "parser"
path = "src/bin/parser.rs"

[[bin]]
name = "indexer"
path = "src/bin/indexer.rs"

[[bin]]
name = "embedder"
path = "src/bin/embedder.rs"

[[bin]]
name = "search"
path = "src/bin/search.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "json"] }
scraper = "0.20"
url = "2.5"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
sha2 = "0.10"
html-escape = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rust-stemmers = "1.2"
regex = "1"
dotenv = "0.15"
once_cell = "1"
ego-tree = "0.6"
half = "2.4"
